--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -86,7 +86,9 @@ jobs:
           # Install Sphinx
           pip install -r docs/requirements.txt
 
-          sudo apt-get update
+          # Update apt libraries in the event the ubuntu version
+          # is outdated
+          sudo apt update
           
           # Install dependencies for PDF generation
           sudo apt install texlive-latex-recommended texlive-fonts-recommended texlive-latex-extra latexmk
